// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authorizations should return all authorizations 1`] = `
Object {
  "authorizations": Object {
    "__typename": "AuthorizationsConnection",
    "nodes": Array [
      Object {
        "__typename": "Authorization",
        "authId": "103",
        "createdBlockId": "128",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xbc18d7b0241882bcfc94b5fe0d520988f2a9f4050a2a1df58c4de14ee23f3915",
        "type": "JoinIdentity",
        "updatedBlockId": "129",
      },
      Object {
        "__typename": "Authorization",
        "authId": "230",
        "createdBlockId": "311",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xeb686d5391c1123fcd252419bc1e77b525f46bddc8964d34e74be0988c419fea",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "312",
      },
      Object {
        "__typename": "Authorization",
        "authId": "231",
        "createdBlockId": "313",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "314",
      },
      Object {
        "__typename": "Authorization",
        "authId": "232",
        "createdBlockId": "317",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0xeb686d5391c1123fcd252419bc1e77b525f46bddc8964d34e74be0988c419fea",
        "status": "Consumed",
        "toDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "318",
      },
      Object {
        "__typename": "Authorization",
        "authId": "247",
        "createdBlockId": "344",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xc5ccde150ee81ea66cb9a7d49250ba6590087504322412bef75093b68134c59e",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x6e041ae54374e2e593f540782a9c54d0a91ca8ebf91060acd5b69e7332e9856c",
        "type": "JoinIdentity",
        "updatedBlockId": "345",
      },
      Object {
        "__typename": "Authorization",
        "authId": "269",
        "createdBlockId": "722",
        "data": "{\\"asset\\":{\\"whole\\":null},\\"extrinsic\\":{\\"whole\\":null},\\"portfolio\\":{\\"whole\\":null}}",
        "expiry": null,
        "fromDid": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xbc536d93907cfd70c5db6382d27776554f7338669c518dcef282caf7a4e8fc4b",
        "type": "JoinIdentity",
        "updatedBlockId": "723",
      },
      Object {
        "__typename": "Authorization",
        "authId": "277",
        "createdBlockId": "740",
        "data": "{\\"5Dfew5jnLuwQqEvvYFJcTJxHanfrNUGx33tWfbuR2a1X9oqe\\",\\"5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY\\",\\"100000\\"}",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x46e3fad9460b2795400d9b6b93ac367e21dfcc22cb27d1adbcfd7a5187ed9d6f",
        "type": "AddRelayerPayingKey",
        "updatedBlockId": "741",
      },
      Object {
        "__typename": "Authorization",
        "authId": "75",
        "createdBlockId": "102",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0x25ebc60487a6e8c621b5987d0efa148a61be92f4810690b9a7d45298145f4ae8",
        "status": "Pending",
        "toDid": null,
        "toKey": "0x5a6a40ba68157d8c645bd9d380c0b1f638195740c6ab01510e66e2fb0fdb780e",
        "type": "JoinIdentity",
        "updatedBlockId": "102",
      },
      Object {
        "__typename": "Authorization",
        "authId": "76",
        "createdBlockId": "103",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xda9b8b789c89450c4711db80f31b26c6d70b3075806a29806a9e0ab0dd72d88e",
        "status": "Pending",
        "toDid": null,
        "toKey": "0x7a37282c5bbeee50ef3f3fe0308d344284ac6384b1f75deb1caad9f86d095a08",
        "type": "JoinIdentity",
        "updatedBlockId": "103",
      },
      Object {
        "__typename": "Authorization",
        "authId": "77",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x139dad9675f6d89bbe39d4a1ffcb824b9ff44fce366390090752a926d7c6e689",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
      Object {
        "__typename": "Authorization",
        "authId": "78",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x81c9b01d440ae8b2330e400411564d64446502b1452cc31de731730e411a6e39",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
      Object {
        "__typename": "Authorization",
        "authId": "79",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0xee7cd3d29832c3ad6db1dedb99b8fd146b57c6458fd79d17c5ac81f3d098227a",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
      Object {
        "__typename": "Authorization",
        "authId": "94",
        "createdBlockId": "116",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xd066bfeefcb60c5a33bfa79d4466ad016a12e80fa0149b85f95884ed4327071e",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x460963cd0e0e6a8d4553ba2adde6cfa9e56786895f67f0a320967a44afd1e55c",
        "type": "JoinIdentity",
        "updatedBlockId": "118",
      },
      Object {
        "__typename": "Authorization",
        "authId": "95",
        "createdBlockId": "117",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0x6f6e1b8b1554b91f186a5040bad955e00b526e7d27dab20c0f4f4fdedd94cd0b",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xfaf1ab23de39dc22c7c56eb662c96e6e0ff527acffadc2d005ac3065f767cf78",
        "type": "JoinIdentity",
        "updatedBlockId": "119",
      },
    ],
  },
}
`;

exports[`authorizations should return authorisations filtered by authorization type 1`] = `
Object {
  "authorizations": Object {
    "__typename": "AuthorizationsConnection",
    "nodes": Array [
      Object {
        "__typename": "Authorization",
        "authId": "230",
        "createdBlockId": "311",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xeb686d5391c1123fcd252419bc1e77b525f46bddc8964d34e74be0988c419fea",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "312",
      },
      Object {
        "__typename": "Authorization",
        "authId": "231",
        "createdBlockId": "313",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "314",
      },
      Object {
        "__typename": "Authorization",
        "authId": "232",
        "createdBlockId": "317",
        "data": "{\\"0x31325449434b455200000000\\",\\"{\\\\\\"full\\\\\\":null}\\"}",
        "expiry": null,
        "fromDid": "0xeb686d5391c1123fcd252419bc1e77b525f46bddc8964d34e74be0988c419fea",
        "status": "Consumed",
        "toDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "318",
      },
      Object {
        "__typename": "Authorization",
        "authId": "77",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x139dad9675f6d89bbe39d4a1ffcb824b9ff44fce366390090752a926d7c6e689",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
      Object {
        "__typename": "Authorization",
        "authId": "78",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x81c9b01d440ae8b2330e400411564d64446502b1452cc31de731730e411a6e39",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
      Object {
        "__typename": "Authorization",
        "authId": "79",
        "createdBlockId": "104",
        "data": "5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0xee7cd3d29832c3ad6db1dedb99b8fd146b57c6458fd79d17c5ac81f3d098227a",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "104",
      },
    ],
  },
}
`;
